feat: implement core security, booking management, and notification services with JWT authentication( Solve after merge errors)